[metadata]
name = aping_cli
version = 0.1.0
description = A tool to ping multiple hosts at once and export results as Prometheus metrics.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/alexpizarroj/aping
author = Alex Pizarro
author_email = alex.pizarro.j@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
install_requires =
    multiping==1.1.2
    prometheus-client==0.16.0
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    aping = aping.main:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[flake8]
max-line-length = 120
